--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.8.3",
+    "font-awesome": "^4.7.0",
     "nuxt": "^2.14.12"
   },
   "devDependencies": {
