--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,8 +1,8 @@
-name: Deploy master
+name: Deploy main
 on:
   push:
     branches:
-    - master
+    - main
 
 jobs:
   build:
@@ -15,7 +15,7 @@ jobs:
     - name: Install Node.js
       uses: actions/setup-node@v1
       with:
-        node-version: 14.x
+        node-version: 16.x
 
     - name: Install NPM packages
       run: yarn install
@@ -31,8 +31,8 @@ jobs:
       with:
         aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        application_name: MyApplicationName
-        environment_name: MyApplication-Environment
+        application_name: ${{ secrets.AWS_EB_APPLICATION_NAME }}
+        environment_name: ${{ secrets.AWS_EB_APPLICATION_ENVIRONMENT }}
         version_label: "ver-${{ github.sha }}"
-        region: us-west-2
+        region: eu-west-1
         deployment_package: deploy.zip
