--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -2,7 +2,7 @@ name: Deploy main
 on:
   push:
     branches:
-    - main
+    - debug_deploy
 
 jobs:
   build:
@@ -24,7 +24,7 @@ jobs:
       run: yarn run build
 
     - name: Generate deployment package
-      run: zip -r deploy.zip ./* -x '*.git*'
+      run: zip -r deploy.zip . -x '*.git*'
       # run: git archive --format=zip HEAD > deploy.zip
 
     - name: Deploy to EB
