added prestart, removed yarn install

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -17,11 +17,11 @@ jobs:
       with:
         node-version: 16.x
 
-    - name: Install NPM packages
-      run: yarn install
+    # - name: Install NPM packages
+    #   run: yarn install
 
-    - name: Build project
-      run: yarn run build
+    # - name: Build project
+    #   run: yarn run build
 
     - name: Generate deployment package
       run: zip -r deploy.zip . -x '*.git*' -J
