--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,10 +12,10 @@ jobs:
     - name: Checkout source code
       uses: actions/checkout@v2
 
-    - name: Install Node.js
-      uses: actions/setup-node@v1
-      with:
-        node-version: 16.x
+    # - name: Install Node.js
+    #   uses: actions/setup-node@v1
+    #   with:
+    #     node-version: 16.x
 
     # - name: Install NPM packages
     #   run: yarn install
@@ -24,7 +24,8 @@ jobs:
     #   run: yarn run build
 
     - name: Generate deployment package
-      run: zip -r deploy.zip . -x '*.git*' -J
+      run: (cd deploy && zip -r -X "../deploy.zip" .)
+      # run: zip -r deploy.zip . -x '*.git*' -J
       # run: git archive --format=zip HEAD > deploy.zip
 
     - name: Deploy to EB
