--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -23,6 +23,9 @@ jobs:
     # - name: Build project
     #   run: yarn run build
 
+    - name: Prep zip directory
+      run: mkdir deploy
+
     - name: Generate deployment package
       run: (cd deploy && zip -r -X "../deploy.zip" .)
       # run: zip -r deploy.zip . -x '*.git*' -J
