adding depoloy folder path

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -40,4 +40,4 @@ jobs:
         environment_name: ${{ secrets.AWS_EB_APPLICATION_ENVIRONMENT }}
         version_label: "ver-${{ github.sha }}"
         region: eu-west-1
-        deployment_package: deploy.zip
+        deployment_package: deploy/deploy.zip
