--- a/package.json
+++ b/package.json
@@ -2,13 +2,11 @@
   "name": "preptime_analyser",
   "version": "1.0.0",
   "private": true,
-
-  "engines" : { 
-    "npm" : ">=8.3.1",
-    "node" : ">=16.14.0"
+  "engines": {
+    "node": ">=14.x"
   },
   "scripts": {
-    "prestart": "yarn install",
+    "prestart": "npm run build",
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
